--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "daisyui": "^2.46.1",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
+    "framer-motion": "^8.1.5",
     "next": "13.1.1",
     "next-sanity": "^3.1.9",
     "react": "18.2.0",
