--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@next/env": "^13.1.1",
     "@next/font": "13.1.1",
     "@portabletext/react": "^2.0.0",
+    "@sanity/icons": "^2.2.2",
     "@sanity/image-url": "^1.0.1",
     "@sanity/ui": "1.0.5",
     "@sanity/vision": "^3.1.2",
